--- a/src/TaskManager/TaskManager.csproj
+++ b/src/TaskManager/TaskManager.csproj
@@ -76,7 +76,13 @@
   <ItemGroup>
     <Compile Include="ConsoleEventLog.cs" />
     <Compile Include="IEventLog.cs" />
+    <Compile Include="IStatsData.cs" />
+    <Compile Include="IStatsStrategy.cs" />
+    <Compile Include="MemoryStatsData.cs" />
+    <Compile Include="MemoryStatsStrategy.cs" />
     <Compile Include="NativeMethods.cs" />
+    <Compile Include="PerformanceCounterStatsData.cs" />
+    <Compile Include="PerformanceCounterStatsStrategy.cs" />
     <Compile Include="TaskSupervisor.cs" />
     <Compile Include="TaskManagerService.cs">
       <SubType>Component</SubType>
