Added Mono.Option to allow parse command line arguments. * e|event-log: the event log. Available values are: Console and Windows. Default is: Windows; * s|stats: the stats strategy. Available values are: Memory and PerformanceCounter. Default is: PerformanceCounter; * non-stop: if should wait for user interaction * non-stop-wait: the time in milliseconds to wait to tasks run when in non-stop mode * h|help: show this message and exit.

--- a/src/TaskManager.Common/TaskManager.Common.csproj
+++ b/src/TaskManager.Common/TaskManager.Common.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1F783A90-7FC2-4791-A215-2919DCBE6B67}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -61,14 +59,13 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.XML" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration\ConfigurationHelpers.cs" />
