--- a/src/msbuilds/TaskManager.Sample.targets
+++ b/src/msbuilds/TaskManager.Sample.targets
@@ -10,6 +10,10 @@
 
           <Copy
               SourceFiles="@(FilesToCopy)"
-              DestinationFolder="$(MSBuildProjectDirectory)\..\TaskManager\bin\$(Configuration)\Task.Sample\"/>     
+              DestinationFolder="$(MSBuildProjectDirectory)\..\TaskManager\bin\$(Configuration)\Task.Sample\"/>   
+              
+          <Copy
+	      SourceFiles="@(FilesToCopy)"
+              DestinationFolder="$(MSBuildProjectDirectory)\..\TaskManager.FunctionalTests\bin\$(Configuration)\Task.Sample\"/> 
     </Target>
 </Project>
