--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,8 +45,8 @@ after_build:
 
 test_script:
 - ps: >-
-    .\src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:nunit-console.exe -register:user "-targetargs:""src\TaskManager.UnitTests\bin\$env:CONFIGURATION\TaskManager.UnitTests.dll","src\TaskManager.FunctionalTests\bin\$env:CONFIGURATION\TaskManager.FunctionalTests.dll"" -filter:"+[TaskManager]*" -output:opencoverCoverage.xml
-
+    .\src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:nunit-console.exe -register:user "-targetargs:""src\TaskManager.UnitTests\bin\$env:CONFIGURATION\TaskManager.UnitTests.dll","src\TaskManager.FunctionalTests\bin\$env:CONFIGURATION\TaskManager.FunctionalTests.dll"" " -filter:"+[TaskManager]*" -output:opencoverCoverage.xml 
+    
 
 
     .\src\packages\coveralls.net.0.6.0\tools\csmacnz.Coveralls.exe --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
