--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,6 +45,10 @@ after_build:
 
 test_script:
 - ps: >-
+    .nunit3-console.exe "src\TaskManager.FunctionalTests\bin\$env:CONFIGURATION\TaskManager.FunctionalTests.dll"
+    
+
+
     .\src\packages\OpenCover.4.6.519\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -register:user "-targetargs:""src\TaskManager.UnitTests\bin\$env:CONFIGURATION\TaskManager.UnitTests.dll"" " -filter:"+[TaskManager]*" -output:opencoverCoverage.xml 
     
 
