--- a/src/TaskManager/App.config
+++ b/src/TaskManager/App.config
@@ -1,7 +1,10 @@
 <?xml version="1.0"?>
 <configuration>
 	<appSettings>
+		<!-- The Windows Service name -->
 		<add key="Instance.Name" value="TaskManager.1" />
+		
+		<!-- The Windows Service description, and EventLog category -->
 		<add key="Instance.Description" value="TaskManager (1)" />
 	</appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
