Changed default location where TaskManager looks for modules to a "modules" subdirectory inside the TaskManager.exe directory; added App.config setting to specify the directory where TaskManager should look for modules (falls back to the "modules" subdirectory if the specified path is not found).

--- a/src/msbuilds/TaskManager.Sample.targets
+++ b/src/msbuilds/TaskManager.Sample.targets
@@ -6,14 +6,14 @@
       </ItemGroup>
  	
       <Target Name="AfterBuild">
-          <Message Text="### Copying $(MSBuildProjectName) files ..." Importance="high" />
+          <Message Text="### (MSBUILD) Copying $(MSBuildProjectName) files ..." Importance="high" />
 
           <Copy
               SourceFiles="@(FilesToCopy)"
-              DestinationFolder="$(MSBuildProjectDirectory)\..\TaskManager\bin\$(Configuration)\Task.Sample\"/>   
+              DestinationFolder="$(MSBuildProjectDirectory)\..\TaskManager\bin\$(Configuration)\modules\Task.Sample\"/>   
               
           <Copy
 	      SourceFiles="@(FilesToCopy)"
-              DestinationFolder="$(MSBuildProjectDirectory)\..\TaskManager.FunctionalTests\bin\$(Configuration)\Task.Sample\"/> 
+              DestinationFolder="$(MSBuildProjectDirectory)\..\TaskManager.FunctionalTests\bin\$(Configuration)\modules\Task.Sample\"/> 
     </Target>
 </Project>
