--- a/src/TaskManager/App.config
+++ b/src/TaskManager/App.config
@@ -6,5 +6,9 @@
 		
 		<!-- The Windows Service description, and EventLog category -->
 		<add key="Instance.Description" value="TaskManager (1)" />
+		
+		<!-- Points to the directory where modules will be loaded from -->
+		<!-- Defaults to a directory named "modules" under the directory this runs from -->
+		<!-- <add key="Modules.Path" value="C:\Some\Path" /> -->
 	</appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
